# pylogger-poetry

./: pyproject.toml
tests/: test_pylogger_poetry.py
