[tool.poetry]
name = "pylogger-poetry"
version = "0.1.0"
description = ""
authors = ["Paul Matthews <paul@paulmatthews.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
